--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -1,7 +1,7 @@
 .sidebar {
   position: fixed;
   top: 0;
-  width: 200px;
+  width: 20%;
   height: 100vh;
   border-right: 1px solid #4e4e4c4d;
   overflow: auto;
