--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 .app {
+  margin-top: 100px;
   .container {
-    margin-left: 200px;
+    margin-left: 20%;
+    position: relative;
+    width: 80%;
   }
 }
