--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   border-right: 1px solid #4e4e4c4d;
   overflow: auto;
+  padding-left: 15px;
   &::-webkit-scrollbar {
     width: 3px;
   }
@@ -23,8 +24,7 @@
   }
 
   &__logo {
-    text-align: center;
-    padding: 20px 0;
+    padding: 20px;
     a {
       font-size: 40px;
       color: #fff;
