--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,13 @@
 .app {
   margin-top: 100px;
   .container {
-    margin-left: 20%;
+    margin-left: 0%;
     position: relative;
-    width: 80%;
+    width: 100%;
+
+    &.sidebar-open {
+      width: 80%;
+      margin-left: 20%;
+    }
   }
 }
