--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -5,9 +5,14 @@
   align-items: center;
   position: fixed;
   top: 0;
-  width: 80%;
-  background-color: #09090a;
+  width: 100%;
+  background-color: #181818;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 100;
+  transition: width 0.3s linear;
+  &.sidebar-open {
+    width: 80%;
+  }
 
   &__user {
     display: flex;
@@ -16,6 +21,26 @@
       color: #fff;
       padding-left: 10px;
       font-weight: bolder;
+    }
+  }
+
+  .action-close {
+    color: #a3a696;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 0 10px;
+    &.active {
+      color: #fff;
+    }
+  }
+
+  .action-open {
+    color: #a3a696;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 0 10px;
+    &.active {
+      color: #fff;
     }
   }
 }
