--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ $secondary: #7b818a;
   margin: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  transition: all 0.3s linear;
 }
 
 body {
