--- a/src/App.scss
+++ b/src/App.scss
@@ -9,5 +9,13 @@
       width: 80%;
       margin-left: 20%;
     }
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      margin-left: 0%;
+      &.sidebar-open {
+        width: 100%;
+        margin-left: 0%;
+      }
+    }
   }
 }
