--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,3 +1,49 @@
+#dark .header {
+  background-color: #181818;
+
+  .label {
+    background-color: #333;
+  }
+
+  .ball {
+    background-color: #fff;
+  }
+
+  .action {
+    color: #a3a696;
+
+    &.active {
+      color: #fff;
+    }
+  }
+  .bars-icon {
+    color: #eef2f2;
+  }
+}
+
+#light .header {
+  background-color: #eef2f2;
+  .label {
+    background-color: rgb(231, 230, 230);
+  }
+
+  .ball {
+    background-color: #999;
+  }
+
+  .action {
+    color: #acacac;
+
+    &.active {
+      color: #333;
+    }
+  }
+
+  .bars-icon {
+    color: #181818;
+  }
+}
+
 .header {
   padding: 20px;
   display: flex;
@@ -6,7 +52,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #181818;
+
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 100;
   transition: width 0.3s linear;
@@ -14,16 +60,46 @@
     width: 80%;
   }
 
-  &__user {
-    display: flex;
-    align-items: center;
-    a {
-      color: #fff;
-      padding-left: 10px;
-      font-weight: bolder;
+  .switch-theme {
+    padding-right: 20px;
+    .checkbox {
+      opacity: 0;
+      position: absolute;
     }
-    @media screen and (max-width: 1024px) {
-      display: none;
+
+    .label {
+      border-radius: 50px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 5px;
+      position: relative;
+      height: 26px;
+      width: 50px;
+      transform: scale(1.5);
+
+      .ball {
+        border-radius: 50%;
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        height: 22px;
+        width: 22px;
+
+        transition: transform 0.2s linear;
+
+        &#dark {
+          transform: translateX(0px);
+        }
+        &#light {
+          transform: translateX(24px);
+        }
+      }
+    }
+
+    .checkbox:checked + .label .ball {
+      transform: translateX(24px);
     }
   }
 
@@ -31,24 +107,11 @@
     @media screen and (max-width: 1024px) {
       display: none;
     }
-    .action-close {
-      color: #a3a696;
-      font-size: 20px;
-      cursor: pointer;
-      padding: 0 10px;
-      &.active {
-        color: #fff;
-      }
-    }
 
-    .action-open {
-      color: #a3a696;
+    .action {
       font-size: 20px;
       cursor: pointer;
       padding: 0 10px;
-      &.active {
-        color: #fff;
-      }
     }
   }
   @media screen and (max-width: 1024px) {
@@ -59,7 +122,6 @@
   }
 
   .bars-icon {
-    color: #fff;
     font-size: 30px;
     cursor: pointer;
     display: none;
