--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -1,3 +1,15 @@
+#dark .search {
+  input {
+    color: white;
+  }
+}
+
+#light .search {
+  input {
+    color: #181818;
+  }
+}
+
 .search {
   position: relative;
   &__icon {
@@ -15,7 +27,6 @@
     height: 100%;
     border-radius: 20px;
     padding: 10px 10px 10px 40px;
-    color: white;
     background-color: inherit;
     outline: none;
     font-size: 20px;
