--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,12 @@
   &#dark {
     background-color: #181818;
     color: #eef2f2;
+    border-bottom: 2px solid #181818;
   }
   &#light {
     background-color: #eef2f2;
     color: #181818;
+    border-bottom: 2px solid #eef2f2;
   }
   min-height: 100vh;
   padding-top: 100px;
