--- a/src/components/Grid/index.scss
+++ b/src/components/Grid/index.scss
@@ -1,10 +1,26 @@
-.grid {
+#dark .grid {
   margin: 0 auto;
   padding: 0 20px;
 
   h1 {
     padding: 20px;
     color: #fff;
+  }
+
+  .content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 2rem;
+  }
+}
+
+#light .grid {
+  margin: 0 auto;
+  padding: 0 20px;
+
+  h1 {
+    padding: 20px;
+    color: #181818;
   }
 
   .content {
