--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -52,12 +52,13 @@
   position: fixed;
   top: 0;
   width: 100%;
-
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 100;
   transition: width 0.3s linear;
-  &.sidebar-open {
-    width: 80%;
+
+  &__action {
+    display: flex;
+    align-items: center;
   }
 
   .switch-theme {
