--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -53,14 +53,15 @@
     padding: 50px 0 80px 0;
   }
   position: fixed;
-  top: 0;
+  top: 80px;
   width: 20%;
   left: -20%;
   height: 100vh;
-  z-index: 1000;
+  z-index: 9;
   overflow-y: auto;
   overflow-x: hidden;
   padding-left: 15px;
+  // padding-top: 20px;
   transition: left 0.3s linear;
 
   &::-webkit-scrollbar {
@@ -77,7 +78,6 @@
   }
 
   &__logo {
-    padding: 20px 10px;
     a {
       font-size: 35px;
       font-weight: bolder;
@@ -87,6 +87,14 @@
         color: #9f3006;
       }
     }
+  }
+
+  &__genres {
+    margin-bottom: 100px;
+  }
+
+  &__categories {
+    margin-top: 20px;
   }
 
   &__categories,
@@ -104,10 +112,9 @@
         transition: all 0.3s linear;
         border-radius: 5px;
         cursor: pointer;
-        a {
-          span {
-            margin-left: 10px;
-          }
+
+        span {
+          margin-left: 10px;
         }
 
         &:hover {
