--- a/src/components/Thumbnail/index.scss
+++ b/src/components/Thumbnail/index.scss
@@ -19,4 +19,21 @@
       opacity: 0.8;
     }
   }
+
+  h3 {
+    color: white;
+    text-align: center;
+  }
+
+  .star-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+
+    span {
+      color: #ffd700;
+      margin: 0 5px;
+    }
+  }
 }
