--- a/src/components/Thumbnail/index.scss
+++ b/src/components/Thumbnail/index.scss
@@ -20,11 +20,6 @@
     }
   }
 
-  h3 {
-    color: white;
-    text-align: center;
-  }
-
   .star-container {
     display: flex;
     justify-content: center;
@@ -35,5 +30,19 @@
       color: #ffd700;
       margin: 0 5px;
     }
+  }
+}
+
+#dark {
+  h3 {
+    color: white;
+    text-align: center;
+  }
+}
+
+#light {
+  h3 {
+    color: #181818;
+    text-align: center;
   }
 }
